Commit all expecting merge

--- a/war/checkin.html
+++ b/war/checkin.html
@@ -11,14 +11,14 @@
     <!--                                                               -->
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <!--                                                               -->
-    <link type="text/css" rel="stylesheet" href="GoogleWebProject.css">
+    <link type="text/css" rel="stylesheet" href="checkin.css">
     
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
-    <script type="text/javascript" language="javascript" src="googlewebproject/googlewebproject.nocache.js"></script>
+    <script type="text/javascript" language="javascript" src="checkin/checkin.nocache.js"></script>
   </head>
 
   <!--                                           -->
